--- a/BloodConnector.WebAPI/app/views/profile.html
+++ b/BloodConnector.WebAPI/app/views/profile.html
@@ -159,7 +159,7 @@
                                         <span ng-if="vm.profile.city || vm.profile.address">
                                             <br/>
                                             <span ng-bind="vm.profile.city"></span>
-                                            <span ng-if="vm.profile.postCode">,</span>
+                                            <span ng-if="vm.profile.postCode">-</span>
                                             <span ng-bind="vm.profile.postCode"></span>
                                         </span>
                                     </td>
