--- a/BloodConnector.WebAPI/app/views/users.html
+++ b/BloodConnector.WebAPI/app/views/users.html
@@ -39,7 +39,7 @@
                             <span ng-if="item.city || item.address">
                                 <br />
                                 <span ng-bind="item.city"></span>
-                                <span ng-if="item.postCode">,</span>
+                                <span ng-if="item.postCode">-</span>
                                 <span ng-bind="item.postCode"></span>
                             </span>
                         </td>
