--- a/BloodConnector.WebAPI/app/views/users.html
+++ b/BloodConnector.WebAPI/app/views/users.html
@@ -13,6 +13,36 @@
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4">&nbsp;</div>
     </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-danger">A+</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-danger">A-</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-danger">B+</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-danger">B-</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-danger">AB+</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-primary">AB-</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-danger">O+</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-danger">O-</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="row search disable-text-selection">
         <div class="col-md-12">
