Added video help

--- a/BloodConnector.WebAPI/app/views/about.html
+++ b/BloodConnector.WebAPI/app/views/about.html
@@ -1,5 +1,8 @@
 ﻿<div data-ng-controller="aboutController as vm">
     <div class="alert alert-info mb0" role="alert"><h3 class="text-center mt10">Help</h3></div>
+    <div class="text-center">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/6jvUJRR6w1c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <h3>Technical help:</h3>
